Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/BadStatementInLambda02.out
BadStatementInLambda02.java:16:42: compiler.err.cant.resolve.location: kindname.class, NonExistentClass, , , (compiler.misc.location: kindname.class, BadStatementInLambda02, null)
1 error
